Bug 383716 - nsWebBrowserPersist::OnStopRequest doesn't check |status| for failure p=Edward Lee (Mardak) <edilee@mozilla.com> r=biesi, sr=bz